# Projet_Cir2_Bank

./: Je_suis_caché.Stonks  README.md
Affichage graphique/: bdd.xml  makefile  test.cpp
Affichage graphique/src/: test.cpp
Agence0/: bdd.xml
Agence1/: bdd.xml
Banque_Centrale/: bdd.xml  client  client.cpp  makefile
Banque_Centrale/fichier client/: client  client.cpp
Banque_Centrale/fichier client/src/: client.cpp
Banque_Centrale/src/: serveur.cpp  xml_parser.cpp  xml_parser.hpp
Communication/: bdd.xml
Communication/src/: client.cpp  client.hpp  main.cpp  moteur.cpp  moteur.hpp  xml_parser.cpp  xml_parser.hpp
Dossier inutile/Affichage graphique/: testxml.xml
Dossier inutile/Banque_Centrale/: bdd.xml
Dossier inutile/Banque_Centrale/fichier client/src/: client.cpp  client.hpp
Dossier inutile/Communication/src/: moteur.cpp
Dossier inutile/debug/: client  client2.cpp
Fichier_CMake_Agence/src/: client.hpp
Fichier_CMake_Serveur/: CMakeLists.txt
Fichier_CMake_Serveur/src/: serveur.cpp
Fichier_Cmake_Agence/: CMakeLists.txt
Fichier_Cmake_Agence/Folder_example/: bdd.xml
Fichier_Cmake_Agence/src/: client.cpp  main.cpp  moteur.cpp  moteur.hpp  xml_parser.hpp
Fichier_code/Dossier inutile/: Exemple BDD.xml
Fichier_code/Dossier inutile/Affichage graphique/src/: test.cpp
Fichier_code/Dossier inutile/Banque_Centrale/src/: serveur.cpp  xml_parser.cpp
Fichier_code/Dossier inutile/Communication/: bdd.xml
Fichier_code/Fichier_CMake_Serveur/src/: serveur.cpp  xml_parser.hpp
Fichier_code/Fichier_Cmake_Agence/src/: main.cpp
(+1 files in other folders)
